# -2

./: .env  .replit  INSTALL.md  README.md  archive_system.spec  build.py  config.py  create_setup.py  fix_database.py  forms.py  inno_setup.iss  main.py  models.py  pyproject.toml  replit.nix  setup_final.py  setup_installer.py  نظام الأرشفة للدراسات العليا.spec  نظام_الأرشفة.spec  نظام_الأرشفة_النهائي.spec
